--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
-
+qmldir
+io
+.idea
+*.pyproject.user
 *~
 *.autosave
 *.a
